--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-CLOUDINARY_CLOUD_NAME=drfhnbhyo
-CLOUDINARY_UPLOAD_PRESET=ml_default
+EXPO_PUBLIC_API_URL=http://1192.168.1.7:3000/api
+EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=drfhnbhyo
+EXPO_PUBLIC_CLOUDINARY_UPLOAD_PRESET=ml_default
