--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+#Debe poner la ip del dispositivo en el que este corriendo la app
 EXPO_PUBLIC_API_URL=http://1192.168.1.7:3000/api
+
+#Credenciuales de Cloudinary
 EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=drfhnbhyo
 EXPO_PUBLIC_CLOUDINARY_UPLOAD_PRESET=ml_default
