--- a/app.json
+++ b/app.json
@@ -12,10 +12,12 @@
       "supportsTablet": true
     },
     "android": {
+      "usesCleartextTraffic": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.hectordiaz03.bibliotecapublica"
     },
     "web": {
       "bundler": "metro",
